testing/framework/resources/Advanced/Failing/mondrian/query5899.e
1997	Drink	Baking Goods	Dry Goods	Coffee	835.0000
